fix icon dark mode

--- a/style.css
+++ b/style.css
@@ -368,6 +368,8 @@ body.dark-mode #typewriter {
 .icon:hover {
   transform: scale(1.2); /* Scale the icon slightly on hover */
 }
+
+
 /* BUTTONS */
 
 /* Updated button styles */
@@ -482,12 +484,12 @@ body.dark-mode #typewriter {
 }
 
 
-.arrow {
+.right-arrow {
   position: absolute;
   right: -5rem;
   bottom: 2.5rem;
-  width: 40px; /* Adjust arrow width */
-  height: 40px; /* Adjust arrow height */
+  width: 60px; /* Adjust arrow width */
+  height: 60px; /* Adjust arrow height */
   /* Add other arrow styles */
   animation: arrowMovement 1s infinite alternate; /* Set up animation */
 }
@@ -505,10 +507,10 @@ body.dark-mode #typewriter {
 .middle-arrow {
   position: absolute;
   bottom: 5%;
-  right: 49%;
+  right: 48%;
   transform: translate(50%, 50%);
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   animation: arrowMovement 1s infinite alternate;
 }
 
@@ -718,11 +720,10 @@ body.dark-mode .project-title {
 
 .contact-icon {
   cursor: default;
-}
-
-.email-icon {
   height: 2.5rem;
 }
+
+
 
 /* FOOTER SECTION */
 
